syntax = "proto3";

package barge_proto;

service Barge {
  rpc Join (JoinRequest) returns (JoinResponse) {}
}

message Route {
  int32 node_name = 1;
  int32 hops = 2;
  int32 direction = 3;
}

message JoinRequest {
  int32 port = 1;
}

message JoinResponse {
  repeated int32 peers = 1 [packed = true];
  repeated Route routes = 2;
}
